# temp-navegavo

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
navegavo/: __main__.py  asgi.py  constants.py  controllers.py  di.py  logging.py  schema.py  typing.py
navegavo/base/: __init__.py  services.py
navegavo/features/screen_chat/: controllers.py  di.py  schema.py  services.py
navegavo/features/screen_chat/schema/: requests.py  responses.py
navegavo/features/transcriptions/: constants.py  controllers.py  di.py  schema.py  services.py
navegavo/features/transcriptions/schema/: __init__.py
navegavo/features/tts/: controllers.py  di.py  schema.py  services.py
navegavo/schema/: __init__.py  requests.py  responses.py
scripts/: push.sh
