[project]
name = "navegavo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.11.0",
    "litestar[standard]>=2.11.0",
    "llama-index-embeddings-gemini>=0.2.0",
    "llama-index-llms-gemini>=0.3.4",
    "llama-index-llms-groq>=0.2.0",
    "llama-index-multi-modal-llms-gemini>=0.3.0",
    "llama-index>=0.11.8",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "msgspec>=0.18.6",
    "mypy>=1.11.2",
    "pillow>=10.4.0",
    "types-pillow>=10.2.0.20240822",
]
